src/test/deca/context/valid/while/declared_variable_while.deca
// Description:
//    Test usage of declared variable in while.
//    Test rule 3.28
// Resultat:
//
// History:
//    créé le 06/01/2025

{
    int x =0;
    int y=x;
    int z;
    while(y==x) {
        z = 5; // Variable 'z'  déclarée
    }
}
